[gd_scene load_steps=17 format=3 uid="uid://dea8aprnkytio"]

[ext_resource type="PackedScene" uid="uid://dj4u2qb6odmb3" path="res://scenes/entities/emeies/enemy.tscn" id="1_72t8d"]
[ext_resource type="Script" path="res://scenes/entities/emeies/skeleton_mage.gd" id="2_agr3p"]
[ext_resource type="PackedScene" uid="uid://c16qxxd7mhpfp" path="res://graphics/characters/skeleton mage/Skeleton_Mage.glb" id="2_agxk8"]
[ext_resource type="PackedScene" uid="uid://02ix7c6cfe1u" path="res://graphics/weapons/wand.gltf" id="3_ty7we"]
[ext_resource type="Texture2D" uid="uid://cbf5176yt1e2d" path="res://graphics/weapons/barbarian_texture.png" id="4_f10q2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_05e6p"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qqoxn"]
animation = &"Spellcast_Shoot"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_e5jyc"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h0p7m"]
animation = &"2H_Melee_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bnf21"]
animation = &"Walking_B"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8amj1"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ekmw5"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mjeqd"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_d4gl7"]
states/idle/node = SubResource("AnimationNodeAnimation_h0p7m")
states/idle/position = Vector2(360.5, 99.5)
states/walk/node = SubResource("AnimationNodeAnimation_bnf21")
states/walk/position = Vector2(579, 99.75)
transitions = ["idle", "walk", SubResource("AnimationNodeStateMachineTransition_8amj1"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_ekmw5"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_mjeqd")]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_p7bih"]
nodes/AttackAnimation/node = SubResource("AnimationNodeAnimation_qqoxn")
nodes/AttackAnimation/position = Vector2(340, 200)
nodes/AttackOneShot/node = SubResource("AnimationNodeOneShot_e5jyc")
nodes/AttackOneShot/position = Vector2(650, 90)
nodes/MoveStateMachine/node = SubResource("AnimationNodeStateMachine_d4gl7")
nodes/MoveStateMachine/position = Vector2(330, 40)
nodes/output/position = Vector2(810, 160)
node_connections = [&"AttackOneShot", 0, &"MoveStateMachine", &"AttackOneShot", 1, &"AttackAnimation", &"output", 0, &"AttackOneShot"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_okeh7"]
albedo_texture = ExtResource("4_f10q2")

[node name="skeleton_mage" instance=ExtResource("1_72t8d")]
script = ExtResource("2_agr3p")
attack_radius = 10.0

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_05e6p")

[node name="AnimationTree" parent="." index="1"]
root_node = NodePath("../skin")
tree_root = SubResource("AnimationNodeBlendTree_p7bih")
anim_player = NodePath("../skin/AnimationPlayer")
parameters/AttackOneShot/active = false
parameters/AttackOneShot/internal_active = false
parameters/AttackOneShot/request = 0

[node name="Timer" parent="Timers" index="0"]
wait_time = 2.0

[node name="skin" parent="." index="3" instance=ExtResource("2_agxk8")]

[node name="Skeleton3D" parent="skin/Rig" index="0"]
bones/1/position = Vector3(0.00841076, 0.37668, 1.21849e-10)
bones/2/rotation = Quaternion(-0.0605995, -0.130282, -0.00797808, 0.989591)
bones/3/rotation = Quaternion(0.00262114, 8.56987e-05, -0.000697083, 0.999996)
bones/3/scale = Vector3(1, 1, 1)
bones/4/position = Vector3(0.248044, 0.110857, 0.0825816)
bones/4/rotation = Quaternion(-0.578809, -0.248886, -0.73302, 0.256354)
bones/4/scale = Vector3(1, 0.999999, 1)
bones/5/rotation = Quaternion(3.50262e-08, -3.59701e-08, -0.555691, 0.831389)
bones/6/rotation = Quaternion(1.10745e-08, -5.13173e-13, 0.0266581, 0.999645)
bones/7/rotation = Quaternion(-0.191258, -0.675052, -0.0529494, 0.710578)
bones/8/position = Vector3(8.34836e-10, 0.0961252, -0.0575001)
bones/8/rotation = Quaternion(-6.29278e-09, 4.24393e-09, -0.707107, 0.707107)
bones/9/position = Vector3(-0.176682, 0.111703, 0.0891542)
bones/9/rotation = Quaternion(-0.249438, 0.345494, 0.840652, 0.334243)
bones/9/scale = Vector3(1, 0.999999, 1)
bones/10/rotation = Quaternion(2.63747e-08, 4.82425e-08, 0.570161, 0.821533)
bones/11/rotation = Quaternion(-7.94255e-09, -1.43988e-08, -0.0266581, 0.999645)
bones/12/rotation = Quaternion(-0.237833, 0.220807, -0.109662, 0.939497)
bones/13/position = Vector3(-8.34829e-10, 0.0961251, -0.0574999)
bones/13/rotation = Quaternion(0.155711, -0.189455, 0.670289, 0.700409)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(0.0837376, 0.13045, 0.00579252, 0.987895)
bones/16/position = Vector3(0.170945, 0.113587, 1.39233e-08)
bones/16/rotation = Quaternion(0.993419, 0.07354, 0.0394109, 0.0784711)
bones/17/rotation = Quaternion(0.360013, 6.38769e-08, -2.55705e-07, 0.932947)
bones/18/rotation = Quaternion(-0.597252, -0.213089, 0.0555712, 0.77123)
bones/19/rotation = Quaternion(3.26997e-05, 0.920146, -0.391575, -7.41563e-06)
bones/20/rotation = Quaternion(0.990727, -0.0393663, -0.0118657, 0.129496)
bones/21/rotation = Quaternion(0.397861, -6.6404e-08, 2.71529e-07, 0.917446)
bones/22/rotation = Quaternion(-0.607619, 0.111892, -0.0289197, 0.785775)
bones/23/rotation = Quaternion(-1.75885e-05, 0.920151, -0.391563, 4.22046e-06)
bones/24/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/25/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/26/position = Vector3(0.0308395, 0.382458, -2.86687e-15)
bones/26/rotation = Quaternion(1.00138e-08, 1.91522e-09, 0.984639, -0.174603)
bones/27/position = Vector3(3.75295e-09, 0.213436, -1.0343e-08)
bones/27/rotation = Quaternion(-9.99889e-08, 0.391084, 0.920355, -3.39507e-08)
bones/28/position = Vector3(2.3491e-08, 0.16565, -5.09136e-09)
bones/28/rotation = Quaternion(-0.391084, -6.59362e-08, -5.87716e-08, 0.920355)
bones/29/rotation = Quaternion(1, 2.30261e-09, 1.93335e-07, -4.39844e-16)
bones/30/rotation = Quaternion(-6.93878e-18, -9.55588e-16, -1.20164e-08, 1)
bones/31/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/32/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/33/rotation = Quaternion(-5.83589e-09, 6.43837e-10, 0.994809, 0.101756)
bones/34/position = Vector3(-1.11482e-08, 0.213436, -2.50942e-15)
bones/34/rotation = Quaternion(-1.05796e-07, 0.391084, 0.920355, -2.58643e-08)
bones/35/position = Vector3(-6.31128e-09, 0.16565, 2.70695e-09)
bones/35/rotation = Quaternion(-0.391084, -6.73931e-08, -6.22002e-08, 0.920355)
bones/36/rotation = Quaternion(1, 3.76526e-09, 1.94879e-07, 7.45058e-09)
bones/37/rotation = Quaternion(1.00614e-16, -6.74098e-17, -1.57416e-08, 1)
bones/38/position = Vector3(0.839842, 0.719866, -0.447558)
bones/38/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/39/position = Vector3(0.340042, 0.816734, 0.411334)
bones/39/rotation = Quaternion(0.61337, 0.0649646, 0.462503, 0.636905)
bones/39/scale = Vector3(1, 1, 1)
bones/40/position = Vector3(-0.87741, 1.03555, -0.447559)
bones/40/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/41/position = Vector3(-0.337192, 0.825124, 0.275929)
bones/41/rotation = Quaternion(0.327732, -0.224667, -0.904425, 0.155349)

[node name="Skeleton_Mage_Hat" parent="skin/Rig/Skeleton3D" index="0"]
transform = Transform3D(0.999998, -0.00170639, 0.000179186, 0.00171338, 0.998646, -0.0519801, -9.02563e-05, 0.0519803, 0.998648, 0.0281016, 1.74974, -0.0462189)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="skin/Rig/Skeleton3D" index="9"]
transform = Transform3D(-0.218326, 0.76625, -0.604313, -0.616936, 0.371431, 0.69385, 0.756123, 0.524308, 0.391635, -0.28029, 0.690417, 0.349969)
bone_name = "handslot.r"
bone_idx = 13

[node name="wand2" parent="skin/Rig/Skeleton3D/BoneAttachment3D" index="0" instance=ExtResource("3_ty7we")]

[node name="wand" parent="skin/Rig/Skeleton3D/BoneAttachment3D/wand2" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_okeh7")

[node name="Marker3D" type="Marker3D" parent="skin/Rig/Skeleton3D/BoneAttachment3D/wand2" index="1"]
transform = Transform3D(1, -4.76837e-07, -1.19209e-07, 2.08616e-07, 1, 4.61936e-07, -3.8743e-07, 1.19209e-07, 1, -0.0413376, 0.706113, -0.00828898)

[connection signal="timeout" from="Timers/Timer" to="." method="_on_timer_timeout"]

[editable path="skin"]
[editable path="skin/Rig/Skeleton3D/BoneAttachment3D/wand2"]
